2007-11-07  Mike Krüger <mkrueger@novell.com> 

	* Gui/CSharpTextEditorExtension.cs: Fixed "Bug 339480 - Crash in XML comment
	  autocompletion".

2007-11-06  Zach Lute  <zach.lute@gmail.com>

	* Gui/CSharpTextEditorExtension.cs: Added missing null check to fix 
	  Bug #339445.

2007-11-06  Michael Hutchinson <mhutchinson@novell.com> 

	* Gui/CSharpTextEditorExtension.cs: Override TextChanged in order to update
	  Smart Indent engine correctly when buffer is modified before its cursor.

2007-11-06  Mike Krüger <mkrueger@novell.com> 

	* Parser/CodeGenerator.cs: Fixed "Bug 336598 - Renaming variables by
	  refactoring replaces matches in the replace string" and "Bug 335977 -
	  Rename refactoring does not rename instance in foreach".

2007-11-06  Mike Krüger <mkrueger@novell.com> 

	* Parser/Resolver.cs: Fixed "Bug 337658 - MD intellisense does not work for
	  `value'".

2007-11-05  Michael Hutchinson <mhutchinson@novell.com> 

	* FormattingStrategy/CSharpIndentEngine.cs: Properly collapse folded
	  statements when a block is opened. Fixes the first complaint in "Bug
	  338383 - MD ignores existing source code structure.".

2007-11-05  Lluis Sanchez Gual <lluis@novell.com> 

	* CSharpBindingCompilerManager.cs: Provide a better error message in case of
	  type load error in the compiler. Fixes bug #325380.

2007-11-05  Lluis Sanchez Gual <lluis@novell.com> 

	* Parser/Resolver.cs: Include generic type parameters in completion list.
	  Fixes bug #334620.

2007-11-05  Lluis Sanchez Gual <lluis@novell.com> 

	* Gui/CSharpTextEditorExtension.cs: Implemented completion context for
	  "SomeEnum e =". In this case the completion list will show the enum
	  name. Fixes bug #335142.

2007-11-05  Lluis Sanchez Gual <lluis@novell.com> 

	* Parser/Resolver.cs: Include in the completion list the classes from parent
	  namespaces. Fixes bug #338394.

2007-11-05  Lluis Sanchez Gual <lluis@novell.com> 

	* Gui/CSharpTextEditorExtension.cs: Improved completion of 'namespace'