@@ -1,3 +1,8 @@
+2007-11-08  Mike Krüger <mkrueger@novell.com> 
+
+	* Gui/CSharpTextEditorExtension.cs, Parser/Resolver.cs: Fixed "Bug 335140 -
+	  MD does not exlude this class from base classes list".
+
 2007-11-07  Mike Krüger <mkrueger@novell.com> 
 
 	* Gui/CSharpTextEditorExtension.cs: Fixed "Bug 339480 - Crash in XML comment
